# dep

./: .gitignore  BUILD
cmd/dep/: BUILD.bazel
cmd/dep/testdata/cachedir/: BUILD.bazel
cmd/dep/testdata/harness_tests/ensure/add/all-new-double-spec/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/ensure/add/all-new-double/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/init/case1/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/init/case2/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/init/case3/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/init/case4/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/status/ignore_lock_mismatch/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/status/missing_pkgs_lock_mismatch/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/status/override_constraint/initial/: BUILD.bazel
cmd/dep/testdata/harness_tests/status/revision_constraint/initial/: BUILD.bazel
cmd/dep/testdata/init/directdeps/: BUILD.bazel
cmd/dep/testdata/status/collect_constraints/: BUILD.bazel
gps/: BUILD.bazel
gps/internal/pb/: BUILD.bazel
gps/paths/: BUILD.bazel
gps/pkgtree/: BUILD.bazel
hack/licenseok/: BUILD.bazel
internal/feedback/: BUILD.bazel
internal/fs/: BUILD.bazel
internal/importers/base/: BUILD.bazel
internal/importers/glide/: BUILD.bazel
internal/importers/glock/: BUILD.bazel
internal/importers/godep/: BUILD.bazel
internal/importers/govend/: BUILD.bazel
internal/importers/govendor/: BUILD.bazel
internal/importers/gvt/: BUILD.bazel
internal/importers/vndr/: BUILD.bazel
(+53 files in other folders)
