load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "pb_proto",
    srcs = ["source_cache.proto"],
    visibility = ["//gps:__subpackages__"],
)

go_proto_library(
    name = "pb_go_proto",
    importpath = "github.com/golang/dep/gps/internal/pb",
    proto = ":pb_proto",
    visibility = ["//gps:__subpackages__"],
)

go_library(
    name = "go_default_library",
    srcs = ["pb.go"],
    embed = [":pb_go_proto"],
    importpath = "github.com/golang/dep/gps/internal/pb",
    visibility = ["//gps:__subpackages__"],
)
